--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -1,10 +1,21 @@
 {
   "manifest_version": 3,
   "name": "VocabVault",
-  "description": "Extension used for the VocabVault website!",
+  "description": "Extension used for the VocabVault",
+  "icons": {
+    "16": "csbulogo16.png",
+    "32": "csbulogo32.png",
+    "48": "csbulogo48.png",
+    "128": "csbulogo128.png"
+  },
   "version": "1.0",
-  "action": {
-    "default_popup": "hello.html",
-    "default_icon": "csbulogo.png"
-  }
+  "content_scripts": [
+    {
+      "js": ["scripts/content.js"],
+      "matches": [
+        "https://developer.chrome.com/docs/extensions/*",
+        "https://developer.chrome.com/docs/webstore/*"
+      ]
+    }
+  ]
 }
